statefulApp/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-stateful
  labels:
    app: hello-k8s-stateful
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8s-stateful
  template:
    metadata:
      name: hello-k8s-stateful
      labels:
        app: hello-k8s-stateful
        tier: frontend
    spec:
      containers:
        - name: hello-k8s-stateful-api
          image: ghcr.io/yaon-c2h8n2/hello-k8s-stateful-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: hello-k8s-stateful-client
          image: ghcr.io/yaon-c2h8n2/hello-k8s-stateful-client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  app: hello-k8s-stateful
                  tier: frontend
