statefulApp/manifests/pgsql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-stateful-postgres
  labels:
    app: hello-k8s-stateful-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-k8s-stateful
      tier: postgres
  template:
    metadata:
      name: hello-k8s-stateful-postgres
      labels:
        app: hello-k8s-stateful
        tier: postgres
    spec:
      containers:
        - name: hello-k8s-stateful-postgres
          image: postgres:16.4-alpine3.20
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: hello-k8s-stateful-postgres
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: hello-k8s-stateful-postgres
          persistentVolumeClaim:
            claimName: hello-k8s-stateful-postgres
      restartPolicy: Always
